# qiskit-metal

./: .buildinfo  .gitignore  .mailmap  .pylintrc  .style.yapf  .travis.yml  4.01 Capacitance and LOM.ipynb  Ansys Render Peoject Copy.ipynb  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Hbird_3fingercap_v1.py  Hbird_3fingercap_v1_1.ipynb  LaunchGui.py  MANIFEST.in  NEW_DEVELOPER_SETUP.html  Qiskit_Metal.bib  Qiskit_Metal_Test-Copy11.ipynb  README.md  README_ARCH.md  README_Architecture.md  README_Gmsh_Elmer.md  README_Open_FEM_Stack.md  README_STYLE.md  README_Tutorials.md  README_developers.md  ROADMAP.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  architecture.html  changelog.md  constraints.txt  contributor-guide.html  dev_notes.html  docstring_cheat_sheet.html  ecosystem.html  (+29 more)
.claude/: AGENT.md
.doctrees/: NEW_DEVELOPER_SETUP.doctree  architecture.doctree  contributor-guide.doctree  dev_notes.doctree  docstring_cheat_sheet.doctree  ecosystem.doctree  environment.pickle  faq.doctree  headless-usage.doctree  index.doctree  installation.doctree  migration-to-v0.7.0.doctree  overview.doctree  qcomponents-gallery.doctree  qiskit_metal.analyses.em.cpw_calculations.doctree  qiskit_metal.analyses.quantization.lumped_capacitive.doctree  quantization.doctree  videoseducation.doctree  workflow.doctree
.github/: AGENT_POLICY.md  PULL_REQUEST_TEMPLATE.md
Concentric Transmon Qubit/: concentric_transmon_qcomponent_NAL_v2.ipynb
JupyterToPython/: StartHere_exportGDS.py
_dev/: TODO-manual-notebook-rerun.md  auto-runnable-notebooks.txt  ecosystem_landscape.md  fix_notebook_headings.py  fix_notebook_links.py  fix_notebook_titles.py  generate_qcomponent_gallery.py  generate_qlibrary_thumbnails.py  generate_scaffold_icons.py  merge_outputs.py  notebooks-auto-refresh.txt  notebooks-frozen-qt.txt  palace_replaces_ansys.md  rerun_auto.py  restructure_notebooks_v0.6.3.py  sqdmetal_coordination_issue_draft.md  sync_two_folders.py
_modules/: index.html
_sandbox_/: CPW AStar.ipynb  CPW Anchors.ipynb  pathfinder_final.py  pathfinder_tweaked.py
_sources/: NEW_DEVELOPER_SETUP.md.txt  contributor-guide.rst.txt  docstring_cheat_sheet.md.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  migration-to-v0.7.0.rst.txt  overview.rst.txt  qcomponents-gallery.rst.txt  videoseducation.rst.txt  workflow.rst.txt
_static/: documentation_options.js
apidocs/: analyses.html  designs.html  gui.html  qgeometries.html  qiskit_metal._gui.MetalGUI.html  qiskit_metal.analyses.EPRanalysis.html  qiskit_metal.analyses.EigenmodeSim.html  qiskit_metal.analyses.HO_wavefunctions.html  qiskit_metal.analyses.Hcpb.html  qiskit_metal.analyses.Hcpb_analytic.html  qiskit_metal.analyses.LOManalysis.html  qiskit_metal.analyses.LumpedElementsSim.html  qiskit_metal.analyses.QAnalysis.html  qiskit_metal.analyses.QSimulation.html  qiskit_metal.analyses.ScatteringImpedanceSim.html  qiskit_metal.analyses.Sweeper.html  qiskit_metal.analyses.cpw_calculations.html  qiskit_metal.analyses.kappa_calculation.html  qiskit_metal.analyses.lumped_capacitive.html  qiskit_metal.analyses.transmon_analytics.html  qiskit_metal.designs.Components.html  qiskit_metal.designs.DesignFlipChip.html  qiskit_metal.designs.DesignPlanar.html  qiskit_metal.designs.MultiPlanar.html  qiskit_metal.designs.QDesign.html  qiskit_metal.designs.QNet.html  qiskit_metal.qgeometries.QGeometryTables.html  qiskit_metal.qlibrary.BaseQubit.html  qiskit_metal.qlibrary.Cap3Interdigital.html  qiskit_metal.qlibrary.CapNInterdigital.html  qiskit_metal.qlibrary.CapNInterdigitalTee.html  qiskit_metal.qlibrary.CircleCaterpillar.html  qiskit_metal.qlibrary.CircleRaster.html  qiskit_metal.qlibrary.CoupledLineTee.html  qiskit_metal.qlibrary.LaunchpadWirebond.html  qiskit_metal.qlibrary.LaunchpadWirebondCoupled.html  qiskit_metal.qlibrary.LaunchpadWirebondDriven.html  qiskit_metal.qlibrary.LineTee.html  qiskit_metal.qlibrary.NGon.html  qiskit_metal.qlibrary.NSquareSpiral.html  (+68 more)
architecture/: renderer_protocol.html
circuit-examples/: index.html
contributor_guidelines/: pull_request_rules.md
docs/: Makefile  NEW_DEVELOPER_SETUP.md  README.md  architecture.rst  build_docs.py  conf.py  contributor-guide.rst  dev_notes.md  docstring_cheat_sheet.md  ecosystem.rst  faq.rst  getting_started.rst  guide_link.rst  headless-usage.rst  index.rst  installation.rst  make.bat  migration-to-v0.7.0.rst  overview.rst  qcomponents-gallery.rst  qiskit_metal.analyses.HO_wavefunctions.rst  qiskit_metal.analyses.Scanning.rst  qiskit_metal.analyses.Sweeping.rst  qiskit_metal.analyses.em.cpw_calculations.rst  qiskit_metal.analyses.kappa_calculation.rst  qiskit_metal.analyses.lumped_capacitive.rst  qiskit_metal.analyses.quantization.lumped_capacitive.rst  quantization.rst  roadmap.rst  tutorial_link.rst  tutorials.rst  videoseducation.rst  workflow.rst
examples/: hello world.ipynb  qiskit-cubit.py  tutorial1.ipynb
guide/: Deep Dive.ipynb  README.md  Start Here.ipynb  Untitled.ipynb  deepdive-recovery.py  deepdive.py  run.ipynb
hooks/: pre-commit  pre-push
lite/: jupyter-lite.json
qiskit_metal/: Qiskit Metal Test-Copy1.ipynb  __init__.py  _base_dicts.py  _defaults.py  _is_design.py  config.py  draw_cpw.py  draw_functions.py  draw_hfss.py  draw_utility.py  start_metal.py
scripts/: check_env_consistency.py  check_qlibrary_images.py  check_tutorials_sync.py  make_hero_gif.py
stubs/: qiskit_metal._gui.MetalGUI.html  (+1351 more)
venv_11_3_1/share/doc/gmsh/examples/api/: CMakeLists.txt  README.txt  adapt_mesh.cpp  adapt_mesh.py  aneurysm.py  bgmesh.pos  boolean.cpp  boolean.py  bspline_bezier_patches.py  bspline_bezier_trimmed.py  bspline_filling.py  closest_point.py  copy_mesh.py  crack.py  crack3d.py  custom_gui.cpp  custom_gui.py  discrete.cpp  discrete.jl  discrete.py  edges.cpp  explore.cpp  explore.jl  explore.py  extend_field.py  faces.cpp  flatten.py  flatten2.py  fragment_surfaces.cpp  get_data_perf.cpp  get_data_perf.py  glue_and_remesh_stl.py  gui.cpp  gui.jl  gui.py  heal.py  hex.py  hybrid_order.py  import_perf.c  import_perf.cpp  (+71 more)
(+5008 files in other folders)
